--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaV7_To_V11_With_Examples</name>
+	<name>FunctionalProgramming</name>
 	<comment></comment>
 	<projects>
 	</projects>
